[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["port43"]

[project]
name = "port43"
version = "0.1.0"
authors = [
  { name="pogzyb", email="pogzyb@umich.edu" },
]
dependencies = [
  "transformers",
  "torch"
]
description = "WHOIS parsing with Artifical Intelligence"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pogzyb/port43"
Issues = "https://github.com/pogzyb/port43/issues"