[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["port43"]

[tool.hatch.version]
path = "port43/__init__.py"

[project]
name = "port43"
dynamic = ["version"]
authors = [
    { name="pogzyb", email="pogzyb@umich.edu" },
]
license = {file = "LICENSE"}
dependencies = [
    "asyncwhois",
    "langchain",
]
description = "A set of open-source Information Security tools for the 🦜🔗 LangChain framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pogzyb/port43"
Issues = "https://github.com/pogzyb/port43/issues"